# types

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: errors.rs  lib.rs
src/config/: mod.rs
src/config/types/: defaults_configuration.rs  email_configuration.rs  general_configuration.rs  gif_configuration.rs  guild_configuration.rs  kafka_configuration.rs  limit_configuration.rs  region_configuration.rs  register_configuration.rs  security_configuration.rs
src/config/types/subconfigs/defaults/: guild.rs
src/config/types/subconfigs/guild/: autojoin.rs
src/config/types/subconfigs/limits/: message.rs  rates.rs
src/config/types/subconfigs/limits/ratelimits/: auth.rs  mod.rs  route.rs
src/config/types/subconfigs/region/: mod.rs
src/config/types/subconfigs/register/: email.rs
src/config/types/subconfigs/security/: captcha.rs
src/entities/: application.rs  attachment.rs  channel.rs  config.rs  guild.rs  guild_member.rs  message.rs  user.rs  user_settings.rs
src/events/: identify.rs  mod.rs  thread.rs
src/interfaces/: mod.rs  presence.rs
src/schema/: apierror.rs  mod.rs
src/utils/: jwt.rs  mod.rs  snowflake.rs
