[package]
name = "polyphony-types"
version = "0.10.0"
edition = "2021"
license = "GPL-3.0"
description = "Types used throughout the Polyphony project."
repository = "https://github.com/polyphony-chat/types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
backend = ["sqlx", "tokio", "poem"]
client = ["tokio"]
web = []

[dependencies]
atomic = "0.5.1"
base64 = "0.21.0"
bigdecimal = "0.3.0"
bitflags = { version = "2.2.1", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
hostname = "0.3.1"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
openssl = "0.10.52"
poem = { version = "1.3.55", optional = true }
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
sqlx = { version = "0.6.3", features = ["mysql", "sqlite", "json", "chrono", "ipnetwork", "runtime-tokio-native-tls", "any"], optional = true }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"], optional = true }
